plugins {
	id "java"
	id "application"
	id "eclipse"
}

repositories {
	mavenCentral()
}

tasks.withType(JavaCompile) {
	options.release = 17
	options.encoding = "UTF-8"
}

application {
	mainClass = "frost.Frost"
	applicationDefaultJvmArgs = ["-Xmx256M", "--add-opens=java.base/java.io=ALL-UNNAMED"]
}

dependencies {
	implementation("org.slf4j:slf4j-api:2.0.12")
	implementation("org.slf4j:jul-to-slf4j:2.0.12")
	implementation("ch.qos.logback:logback-core:1.5.3")
	implementation("ch.qos.logback:logback-classic:1.5.3")
	implementation(files("lib/perst-4.39.jar"))
	implementation("org.bouncycastle:bcprov-jdk18on:1.77")
	implementation("com.toedter:jcalendar:1.4")
	testImplementation(platform("org.junit:junit-bom:5.10.2"))
	testImplementation("org.junit.jupiter:junit-jupiter")
	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

test {
	useJUnitPlatform()
}
